<resources>
    <string name="app_name">Obuce</string>
    <string name="dont_have_account">Don’t have an account?<b> Sign up </b></string>
    <string name="what_is_your_gender">What is \nyour gender?</string>
    <string name="measure">What is your weight and height?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_makanan">Scan makanan</string>
    <string name="recommended_meals">Recommended Meals</string>
    <string name="you_required_1900kcal_2000kcal">You required <b>1900KCal - 2000KCal</b></string>
    <string name="sort_by">Sort By:</string>
    <string name="food_scan">Food Scan</string>
    <string name="scanning_food_illustration">Scanning food illustration</string>
    <string name="how_to_use">How to Use</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="food_name">Food Name</string>
    <string name="zero">0</string>
    <string name="calories">Cal</string>
    <string name="nutrition_facts_daily_value">Nutrition Facts (% daily value)</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps_to_make_it_yourself">Steps to make it yourself</string>
    <string name="nutrition_name">Nut</string>
    <string name="gram">g</string>
    <string name="open_daily_value">(</string>
    <string name="close_daily_value">%)</string>
    <string name="consult_blank_fragment">consult_blank_fragment</string>
    <string name="statistic_blank_fragment">statistic_blank_fragment</string>
    <string name="sudahkah_kamu_berkonsultasi_dengan_dr_abiyyu_h_yuk_konsultasi_kesehatan_mu_sekarang">Sudahkah kamu berkonsultasi dengan dr abiyyu h yuk konsultasi kesehatan mu sekarang</string>
    <string name="program_dr_oz_indonesia">program dr. OZ Indonesia</string>
    <string name="hello_blank_fragment_data_statistic">hello_blank_fragment_data statistic</string>
    <string name="statistics">STATISTICS</string>
    <string name="worksout">Workout</string>
    <string name="_6">6</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="result_named_objec">result named objec</string>
    <string name="predict_food">predict_food</string>
    <string name="email">Email</string>
    <string name="your_email">your email</string>
    <string name="gender">Gender</string>
    <string name="your_gender">your gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="your_birthdate">your birthdate</string>
    <string name="height">Height</string>
    <string name="your_height">your height</string>
    <string name="weight">Weight</string>
    <string name="your_weight">your weight</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coming_soon_letter">Thank you for your excitement, but unfortunately this page is still in development</string>
    <string name="kebutuhan_gizi_harian">Kebutuhan Gizi Harian</string>
    <string name="helo_ali">Helo, Ali!</string>
    <string name="lihat_kebutuhan_gizi_harianmu_hari_ini">Lihat kebutuhan gizi harianmu hari ini</string>
    <string name="_0000_unit">0000 Unit</string>

    <!--    DATA ITEM ONBOARD-->
    <array name="sortFood">
        <item>Recommended</item>
        <item>Best Deal</item>
    </array>

    <!--    DATA ITEM HOME MAIN TAB-->
    <string-array name="datatitle">
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
        <item>Arm Raises</item>
    </string-array>
    <string-array name="datatime">
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
        <item>00:30</item>
    </string-array>
    <integer-array name="dataimage">
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
        <item>@drawable/screenshottwolistusecase3_3</item>
    </integer-array>

    <!--    DATA ITEM CONSULT MAIN TAB-->
    <string-array name="datanameconsult">
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
        <item>Dr.Reisa Broto Asmoro</item>
    </string-array>
    <string-array name="dataconsulltcompany">
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
        <item>program dr. OZ Indonesia</item>
    </string-array>

    <!--    DATA ITEM LIST ITEM HISTORY CONSUMPTION-->
    <string-array name="dataListHistoryname">
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
        <item>Salad Bowl</item>
    </string-array>
    <string-array name="dataListHistorytime">
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
        <item>10:46 AM</item>
    </string-array>
    <string-array name="dataListHistoryday">
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
        <item>18 Aug</item>
    </string-array>
    <string-array name="dataListHistorycalori">
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
        <item>140 cal</item>
    </string-array>
    <string-array name="dataListHistorycomposition">
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
        <item>70 cal x 2Pcs</item>
    </string-array>
    <integer-array name="dataListHistorycompositionimage">
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
        <item>@drawable/food_stat</item>
    </integer-array>
</resources>