<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please check again your data"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="91dp" />

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="43dp"
                android:layout_marginBottom="8dp"
                android:text="@string/name"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_email_title"
                app:layout_constraintEnd_toStartOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="your name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/tv_name_title" />

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_title" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/tv_email_title" />

            <TextView
                android:id="@+id/tv_gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_title" />
            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_gender"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/tv_gender_title" />

            <TextView
                android:id="@+id/tv_birthdate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/birthdate"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_gender_title" />
            <TextView
                android:id="@+id/tv_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_birthdate"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/tv_birthdate_title" />

            <TextView
                android:id="@+id/tv_height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/height"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_birthdate_title" />
            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_height"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/tv_height_title" />

            <TextView
                android:id="@+id/tv_weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/weight"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_height_title" />
            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_weight"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/tv_weight_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
