<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tab.home.food.scan.ScanResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ps"
                android:text="@string/food_scan"
                android:textColor="@color/dark"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/foodScanPicture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/scanning_food_illustration"
            android:src="@drawable/illustration_o15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/food_name"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodScanPicture" />

        <TextView
            android:id="@+id/foodCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/zero"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/foodName"
            app:layout_constraintTop_toBottomOf="@+id/foodName" />
        <TextView
            android:id="@+id/caloriesMatrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/calories"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/foodCalories"
            app:layout_constraintTop_toTopOf="@+id/foodCalories" />

        <TextView
            android:id="@+id/foodNutritionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nutrition_facts_daily_value"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/foodName"
            app:layout_constraintTop_toBottomOf="@+id/foodCalories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_nutritionFacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/foodName"
            app:layout_constraintTop_toBottomOf="@+id/foodNutritionsTitle"
            tools:listitem="@layout/item_nutrition_daily_value" />

        <TextView
            android:id="@+id/foodIngredientsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/foodName"
            app:layout_constraintTop_toBottomOf="@+id/rv_nutritionFacts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_foodIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/foodName"
            app:layout_constraintTop_toBottomOf="@+id/foodIngredientsTitle" />

        <TextView
            android:id="@+id/foodCookingStepsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/steps_to_make_it_yourself"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/foodName"
            app:layout_constraintTop_toBottomOf="@+id/rv_foodIngredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_foodCookingSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/foodName"
            app:layout_constraintTop_toBottomOf="@+id/foodCookingStepsTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>