<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/ps"
            android:layout_marginHorizontal="30dp"
            android:text="@string/what_is_your_age"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:paddingTop="20dp"
            android:paddingHorizontal="0dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="center"
                    android:fontFamily="@font/ps"
                    android:textColor="@color/dark"
                    android:textSize="20sp"
                    android:text="@string/day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="44sp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/bg_round_main_light"
                    android:textColor="@color/dark"
                    android:fontFamily="@font/ps_bold"
                    android:text="16"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="center"
                    android:fontFamily="@font/ps"
                    android:textColor="@color/dark"
                    android:textSize="20sp"
                    android:text="@string/month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="44sp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/bg_round_main_light"
                    android:textColor="@color/dark"
                    android:fontFamily="@font/ps_bold"
                    android:text="Oct"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="center"
                    android:fontFamily="@font/ps"
                    android:textColor="@color/dark"
                    android:textSize="20sp"
                    android:text="@string/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="44sp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/bg_round_main_light"
                    android:textColor="@color/dark"
                    android:fontFamily="@font/ps_bold"
                    android:text="2000"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
